# symphony

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  config.yaml.example  pyproject.toml  release-please-config.json
.github/workflows/: pre-commit.yml  publish-pypi.yml
.gnosis/: entries.jsonl
.symphony/: setup
.tickets/: S1-bklza.md  S1-exitj.md  S1-hckzr.md  S1-hkdhy.md  S1-kmcui.md  S1-xmmxm.md  Scr-ezwjc.md  Scr-hesei.md  Scr-kdcga.md  Scr-lpzwe.md  Scr-mgjco.md  Scr-tdhvp.md  Scr-ufxmg.md  sym-cbdis.md  sym-dllst.md  sym-gmoah.md  sym-irfzm.md  sym-jurox.md  sym-lzres.md  sym-mpthc.md  sym-ophkz.md  sym-pbmvd.md  sym-qwvip.md  sym-savmo.md  sym-vxacj.md  sym-xbjsn.md  sym-xgrdb.md  sym-xiaom.md
symphony_linear/: __init__.py  __main__.py  attachments.py  cli.py  config.py  github.py  github_tracker.py  linear.py  linear_tracker.py  opencode.py  orchestrator.py  project_config.py  provisioning.py  sandbox.py  state.py  tracker.py  webhook.py  workspace.py
symphony_lite/: __init__.py  __main__.py  cli.py  config.py  linear.py  logging.py  opencode.py  orchestrator.py  sandbox.py  state.py  workspace.py
tests/: test_attachments.py  test_cli.py  test_config.py  test_github.py  test_github_tracker.py  test_linear.py  test_linear_tracker.py  test_opencode.py  test_orchestrator.py  test_project_config.py  test_provisioning.py  test_sandbox.py  test_sandbox_extra_rw.py  test_sandbox_path.py  test_state.py  test_tracker.py  test_webhook.py  test_workspace.py
tests/fixtures/: opencode_events.jsonl  opencode_events_multi_step.jsonl  opencode_events_tool_use.jsonl  smoke_test.sh
