[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symphony-linear"
version = "0.1.0"
description = "AI-powered ticket orchestration daemon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.24",
]

[project.urls]
Source = "https://github.com/skorokithakis/symphony"

[project.scripts]
symphony-linear = "symphony_linear.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["symphony_linear"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
# Tests use FakeLinearClient (a test double) where the production signature
# expects LinearClient.  Suppressing arg-type in tests avoids 30+ per-site
# ignore comments for a pattern that is both intentional and correct.
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that require external dependencies (e.g. bwrap)",
]
